[metadata]
name = unimodel
version = 0.2.0
author = Servei Meteorològic de Catalunya
license = BSD
description = Uniformization of model outputs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >= 3.9
packages = find:
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm

[build_sphinx]
project = 'unimodel'
version = 0.2.0
release = 0.2.0
source-dir = 'docs'

# Note: no install_requires run-time requirements are included here.
# Requirements are expected to be provided through another method such as conda.
# See envs directory at top level of repository.
# scripts = 

[options.packages.find]
exclude =
    tests

[mypy]
ignore_missing_imports = True
